<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.briannak.inclass03.MainActivity">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameEditText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:inputType="text" />

    <ImageView
        android:id="@+id/selectAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/select_avatar"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/selectDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/departmentLabel"
        android:layout_alignLeft="@+id/departmentLabel"
        android:layout_alignStart="@+id/departmentLabel"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp">

        <RadioButton
            android:id="@+id/sisButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sisText" />

        <RadioButton
            android:id="@+id/csButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/csText" />

        <RadioButton
            android:id="@+id/bioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bioText" />
    </RadioGroup>

    <TextView
        android:id="@+id/departmentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectMood"
        android:layout_alignStart="@+id/selectMood"
        android:layout_below="@+id/selectAvatar"
        android:layout_marginTop="12dp"
        android:text="@string/departmentLabelText"
        android:textSize="18dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectDepartment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/submitText" />

</RelativeLayout>
